fix the alignment for post category at moblileW

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -453,13 +453,29 @@ main {
     margin-right: 10px;
   }
 }
+.post-date-right-align {
+  font-family: 'Roboto', 'Arial', 'Microsoft Yahei', sans-serif;
+  color: #666;
+  min-width: 150px;
+  font-size: 14px;
+  text-align:right;
+  margin-left: 0px;
+  margin-right: 4px;
+  padding-left: 0px;
+  
+  @media screen and (max-width: $mobileW) {
+	  margin-bottom: 5px;
+	  text-align: left;
+  }
+}
 .post-date {
   font-family: 'Roboto', 'Arial', 'Microsoft Yahei', sans-serif;
-  margin-right: 0px;
-  padding-left: 5px;
   color: #666;
   min-width: 150px;
   font-size: 15px;
+  text-align:left;
+  margin-left: 0px;
+  padding-left: 5px;
 }
 .post-meta {
   display: flex;
@@ -468,9 +484,6 @@ main {
   @media screen and (max-width: $mobileW) {
     flex-direction: column-reverse;
     align-items: baseline;
-    .post-date {
-      margin-bottom: 16px;
-    }
   }
 }
 .archive-label-meta {
